# IronWing

./: .biomeignore  .env  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  README.md  biome.json  flake.nix  index.html  opencode.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  skills-lock.json  svelte.config.js  svelte.config.ts  tsconfig.e2e.json  tsconfig.json  vite.config.ts  vitest.config.ts
.beads/: issues.jsonl  metadata.json
.codex/: config.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: ci.yml  pages.yml  release.yml
.sisyphus/plans/: setup-tab-redesign.md
crates/ironwing-contract-export/: Cargo.toml
crates/ironwing-contract-export/src/: commands.rs  events.rs  json_wire.rs  main.rs
crates/ironwing-core/: AGENTS.md  Cargo.toml
crates/ironwing-core/src/: bluetooth_profile.rs  event_names.rs  lib.rs  log_engine.rs  log_playback.rs  telemetry.rs  transport.rs  vehicle_config.rs  vehicle_snapshot.rs
crates/ironwing-core/src/ipc/: analytics.rs  calibration.rs  configuration_facts.rs  connection.rs  domain.rs  envelope.rs  firmware.rs  guided.rs  logs.rs  mission.rs  mod.rs  playback.rs  sensor_health.rs  session.rs  status_text.rs  support.rs  telemetry.rs
crates/ironwing-core/src/live/: mod.rs  session_context.rs  snapshot.rs
crates/ironwing-core/src/live_runtime/: capabilities.rs  commands.rs  event_sink.rs  live_vehicle_runtime.rs  mod.rs  snapshots.rs  task_set.rs
crates/ironwing-core/src/runtime/: mod.rs  session.rs
crates/ironwing-firmware/: Cargo.toml
crates/ironwing-firmware/src/: artifact.rs  catalog.rs  dfu_flow.rs  discovery.rs  lib.rs  serial_flow.rs  serial_uploader.rs  types.rs
crates/ironwing-wasm/: Cargo.toml
crates/ironwing-wasm/src/: app.rs  bridge.rs  error.rs  event_sink.rs  firmware.rs  js_value.rs  lib.rs  logs.rs  task.rs
crates/tauri-plugin-bluetooth-classic/: Cargo.toml  build.rs
crates/tauri-plugin-bluetooth-classic/android/: .gitignore  build.gradle.kts
crates/tauri-plugin-bluetooth-classic/android/src/main/java/dev/averylex/bluetooth/classic/: ClassicBluetoothPlugin.kt
crates/tauri-plugin-bluetooth-classic/android/src/main/java/org/ardupilot/bluetooth/classic/: ClassicBluetoothPlugin.kt
crates/tauri-plugin-bluetooth-classic/permissions/: default.toml
crates/tauri-plugin-bluetooth-classic/permissions/autogenerated/: reference.md
crates/tauri-plugin-bluetooth-classic/permissions/autogenerated/commands/: get_bonded_devices.toml  request_bt_permissions.toml
crates/tauri-plugin-bluetooth-classic/permissions/schemas/: schema.json
crates/tauri-plugin-bluetooth-classic/src/: lib.rs  mobile.rs
docs/: browser-cpu-profiling-guide.md  native-telemetry-initialization-handoff.md
e2e/: AGENTS.md  connect-telemetry.spec.ts  demo-connect.spec.ts  demo-simulator.spec.ts  firmware-workspace.spec.ts  guided-affordance.spec.ts  invalid-udp-bind.spec.ts  layout-fit.spec.ts  logs-workspace.spec.ts  mission-editor-e2e.spec.ts  mission-params-hydration.spec.ts  mission-planner.spec.ts  mission-planning-continuity.spec.ts  mission-responsive-support.spec.ts  mission-survey-authoring.spec.ts  parameter-workspace.spec.ts  responsive-shell.spec.ts  settings-actions.spec.ts  setup-config-tester.spec.ts  setup-docs-coverage.spec.ts  setup-e2e-flow.spec.ts  setup-firmware-responsive.spec.ts  setup-motor-direction.spec.ts  setup-rover-audit.spec.ts  setup-vtol-support.spec.ts  setup-wizard.spec.ts  setup-workspace.spec.ts  sitl-connect.spec.ts  smoke.spec.ts  wrong-port-cancel.spec.ts
e2e-native/: AGENTS.md  smoke.spec.mjs  wdio.conf.mjs
e2e/fixtures/: mission-editor-fixture.ts  mock-platform.ts
e2e/helpers/: firmware-workspace.ts  layout-fit.ts  mission-flow.ts  setup-flow.ts  setup-wizard.ts  setup-workspace.ts
e2e/specs/: connection.spec.ts  firmware.spec.ts  hud.spec.ts  logs.spec.ts  mission.spec.ts  overview.spec.ts  settings.spec.ts  setup-osd.spec.ts  setup.spec.ts  smoke.spec.ts  telemetry.spec.ts
e2e/support/: app.ts  layout.ts  test.ts  viewports.ts
scripts/: AGENTS.md  android-build.mjs  android-dev.mjs  demo-build.mjs  demo-dev.mjs  desktop-build.mjs  dev.mjs  e2e-native.mjs  e2e-run.mjs  e2e-serve.mjs  e2e-start.sh  e2e.mjs  generate-demo-param-fixtures.mjs  profile-compare.mjs  profile-serve.mjs  profile-web-hud.mjs  remote-ui.mjs  sitl-ws.mjs  wasm-web-build.mjs  web-build.mjs  web-dev.mjs
scripts/workflow/: AGENTS.md  cpu-profile.mjs  env.mjs  env.test.mjs  frontend.mjs  gsd-worktree-post-create.sh  native-e2e.mjs  native-e2e.test.mjs  paths.mjs  ports.mjs  process.mjs  runtime.mjs  sitl.mjs  (+7 more)
src/: AGENTS.md  App.svelte  App.test.ts  App.tsx  app.css  app.html  calibration.test.ts  calibration.ts  configuration-facts.ts  fence.ts  firmware.ts  guided.test.ts  guided.ts  logs.test.ts  logs.ts  main.ts  mission.ts  param-metadata.test.ts  param-metadata.ts  params.ts  playback.test.ts  playback.ts  rally.ts  recording.test.ts  recording.ts  sensor-health.ts  serial-ports.ts  session.test.ts  session.ts  snapshot.ts  statustext.test.ts  statustext.ts  support.test.ts  support.ts  telemetry.ts  transport.test.ts  transport.ts  types.ts  vite-env.d.ts
src-old/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  analytics.rs  bluetooth.rs  bridges.rs  commands.rs  connection.rs  e2e_emit.rs  guided.rs  helpers.rs  lib.rs  log_library.rs  logs.rs  main.rs  recording.rs  remote_ui.rs  serial_ports.rs  session_runtime.rs  tauri_event_sink.rs
src-tauri/src/firmware/: AGENTS.md  artifact.rs  cache.rs  catalog.rs  commands.rs  dfu_recovery.rs  discovery.rs  mod.rs  serial_executor.rs  serial_uploader.rs  types.rs
src-tauri/src/ipc/: AGENTS.md  calibration.rs  configuration_facts.rs  domain.rs  envelope.rs  guided.rs  logs.rs  mod.rs  playback.rs  sensor_health.rs  session.rs  status_text.rs  support.rs  telemetry.rs
src-tauri/src/logs/: raw_messages.rs
src-tauri/tests/: contract_fixtures.rs
(+1280 files in other folders)
