[workspace]
members = [
    "src-tauri",
    "crates/ironwing-core",
    "crates/ironwing-contract-export",
    "crates/ironwing-firmware",
    "crates/ironwing-wasm",
    "crates/tauri-plugin-bluetooth-classic",
]
default-members = ["src-tauri"]
resolver = "2"

# [patch."https://github.com/AveryanAlex/mavkit.git"]
# mavkit = { path = "../mavkit" }
