[package]
name = "ironwing"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ironwing-app"
path = "src/main.rs"

[lib]
name = "ironwing"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mavkit = { git = "https://github.com/AveryanAlex/mavkit.git", branch = "main", default-features = false, features = ["udp", "tcp", "ardupilot", "stream", "tlog"] }
mavlink = { version = "0.17", features = ["tokio-1", "emit-extensions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-blec = "0.5"
ardupilot-binlog = { git = "https://github.com/AveryanAlex/ardupilot-binlog.git", branch = "main" }
tokio = { version = "1", features = ["io-util", "net", "sync"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = "1"
base64 = "0.22"
flate2 = "1"
crc32fast = "1"
ureq = "3"
tokio-util = { version = "0.7.18", features = ["rt"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
mavkit = { git = "https://github.com/AveryanAlex/mavkit.git", branch = "main", features = ["serial"] }
serialport = "4"
nusb = "0.2"
dfu-core = { version = "0.10", features = ["std"] }

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-bluetooth-classic = { path = "../crates/tauri-plugin-bluetooth-classic" }
tauri-plugin-geolocation = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
