[package]
name = "ironwing"
version = "0.1.0"
edition = "2024"
default-run = "ironwing-app"

[[bin]]
name = "ironwing-app"
path = "src/main.rs"

[lib]
name = "ironwing"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ironwing-core = { path = "../crates/ironwing-core" }
ironwing-firmware = { path = "../crates/ironwing-firmware", features = ["dfu-core-error"] }
mavkit = { git = "https://github.com/AveryanAlex/mavkit.git", rev = "9ef60f03d8392cad6a3e07f0e79302228afd475f", default-features = false, features = ["udp", "tcp", "ardupilot", "stream", "tlog"] }
mavlink = { git = "https://github.com/AveryanAlex/rust-mavlink.git", rev = "a35d19c2708806f623406b5bfcd13a633416795a", package = "mavlink", default-features = false, features = ["std", "tokio", "serde", "format-generated-code", "mav2-message-extensions", "dialect-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-blec = "0.5"
ardupilot-binlog = { git = "https://github.com/AveryanAlex/ardupilot-binlog.git", branch = "main" }
tokio = { version = "1", features = ["io-util", "net", "sync"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = "1"
base64 = "0.22"
flate2 = "1"
crc32fast = "1"
ureq = "3"
tokio-util = { version = "0.7.18", features = ["rt"] }
humantime = "2"
web-time = "1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
mavkit = { git = "https://github.com/AveryanAlex/mavkit.git", rev = "9ef60f03d8392cad6a3e07f0e79302228afd475f", features = ["serial"] }
serialport = "4"
nusb = "0.2"
dfu-core = { version = "0.10", features = ["std"] }

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-bluetooth-classic = { path = "../crates/tauri-plugin-bluetooth-classic" }
tauri-plugin-geolocation = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
