[package]
name = "ironwing-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ironwing-firmware = { path = "../ironwing-firmware" }
mavkit = { git = "https://github.com/AveryanAlex/mavkit.git", rev = "9ef60f03d8392cad6a3e07f0e79302228afd475f", default-features = false, features = ["ardupilot"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-time = "1"
