[package]
name = "ironwing-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ironwing-firmware = { path = "../ironwing-firmware" }
mavkit = { git = "https://github.com/AveryanAlex/mavkit.git", rev = "9ef60f03d8392cad6a3e07f0e79302228afd475f", default-features = false, features = ["ardupilot"] }
mavlink = { git = "https://github.com/AveryanAlex/rust-mavlink.git", rev = "a35d19c2708806f623406b5bfcd13a633416795a", package = "mavlink", default-features = false, features = ["std", "serde", "format-generated-code", "mav2-message-extensions", "dialect-all"] }
ardupilot-binlog = { git = "https://github.com/AveryanAlex/ardupilot-binlog.git", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-time = "1"
