[package]
name = "ironwing-firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dfu-core = { version = "0.11.1", features = ["std", "async"], optional = true }
futures = { version = "0.3", optional = true }

[features]
dfu-core = ["dep:dfu-core", "dep:futures"]

[dev-dependencies]
futures = "0.3"
