[package]
name = "ironwing-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ironwing-core = { path = "../ironwing-core" }
mavkit = { git = "https://github.com/AveryanAlex/mavkit.git", rev = "9ef60f03d8392cad6a3e07f0e79302228afd475f", default-features = false, features = ["wasm", "ardupilot"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
gloo-timers = { version = "0.3", features = ["futures"] }
web-time = "1"
